# backend-coding-challenge

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
gistapi/: __init__.py  api.py  app.py  client.py  errors.py  gistapi.py  helpers.py  schemas.py
tests/: conftest.py  test_api.py  test_helpers.py
