[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "gistapi"
description = "Backend coding challenge"
readme = "README.md"
authors = [
    {name = "Vitaly Samigullin", email = "samigullinv@gmail.com"},
]
dynamic = ["version"]
requires-python = ">=3.11"

[project.urls]
"Source code" = "https://github.com/pilosus/backend-coding-challenge"

[tool.setuptools_scm]
write_to = "_version.py"

[tool.coverage.report]
fail_under = 75
