[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gistapi"
description = "Backend coding challenge"
readme = "README.md"
authors = [
    {name = "Vitaly Samigullin", email = "samigullinv@gmail.com"},
]
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    # Web
    "Flask==2.3.3",
    "requests==2.31.0",

    # Data validation
    "marshmallow==3.20.1",

    # Testing
    "pytest==7.4.3",
    "pytest-cov==4.1.0"
]


[project.urls]
"Source code" = "https://github.com/pilosus/backend-coding-challenge"

[tool.setuptools_scm]
write_to = "_version.py"

[tool.coverage.report]
fail_under = 75
