[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gistapi"
description = "Backend coding challenge"
readme = "README.md"
authors = [
    {name = "Vitaly Samigullin", email = "samigullinv@gmail.com"},
]
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    # Web
    "Flask==2.3.3",
    "requests==2.31.0",

    # Data validation
    "marshmallow==3.20.1",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0"
]
lint = [
    "black==23.10.1",
    "isort==5.12.0",
    "mypy==1.6.1",
]

[project.urls]
"Source code" = "https://github.com/pilosus/backend-coding-challenge"

[tool.setuptools_scm]
write_to = "_version.py"

[tool.coverage.report]
fail_under = 85

[tool.isort]
atomic = true
line_length = 88
skip_gitignore = true
known_first_party = ["gistapi"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true

[tool.black]
target-version = ["py311"]
line-length = 88
